--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "nodejs",
+  "name": "farming-sse-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "SSE server for vertical farming monitoring",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "dependencies": {
-    "@types/node": "^18.0.6"
+    "cors": "^2.8.5",
+    "express": "^4.21.2"
   }
 }
