--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "farming-sse-server",
+  "name": "license-checker-api",
   "version": "1.0.0",
-  "description": "SSE server for vertical farming monitoring",
-  "main": "server.js",
   "scripts": {
-    "start": "node server.js"
-  },
-  "engines": {
-    "node": ">=14.0.0"
+    "start": "node app.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.21.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.8.0",
+    "helmet": "^7.0.0",
+    "mysql2": "^3.6.0",
+    "cors": "^2.8.5"
   }
 }
